# dataset-catalog

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CONTRIBUTING.md  README.md  release-please-config.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  conventional-commits.yml  release-please.yml
dataset-catalog-client/: CHANGELOG.md  Makefile  README.md  USAGE.md  pyproject.toml
dataset-catalog-client/.claude/skills/model-and-register-dataset/: SKILL.md  register_dataset.py
dataset-catalog-client/catalog_client/: __init__.py  _context.py  cli.py  exceptions.py  models.py
dataset-catalog-client/catalog_client/client/: __init__.py  _base.py  base.py  catalog.py  collections.py  collections_.py  datasets.py  lineages.py  tokens.py
dataset-catalog-client/catalog_client/models/: __init__.py  asset.py  collection.py  dataset.py  governance.py  lineage.py  metadata.py  pagination.py  quality.py
dataset-catalog-client/catalog_client/registration/: __init__.py  builder.py  request.py
dataset-catalog-client/catalog_client/utils/: __init__.py  checksum_generator.py  checksums.py  generator.py  manifest.py
dataset-catalog-client/catalog_client/utils/checksum/: __init__.py  algorithm.py  algorithms.py  generate.py  hashing.py  models.py  s3.py
dataset-catalog-client/catalog_client/utils/manifest/: README.md  __init__.py  _extractor.py  _filter.py  _iterator.py  _types.py  generate.py  write.py
dataset-catalog-client/docs/: catalog-entities.md  checksum_guide.md
dataset-catalog-client/docs/dataset-model/: dataset-model-changelog.md  dataset-schema.md
dataset-catalog-client/examples/: generate_manifest.py  quickstart.ipynb
dataset-catalog-client/tests/: conftest.py  test_cli.py  test_exceptions.py
dataset-catalog-client/tests/client/: test_catalog.py  test_collections.py  test_datasets.py  test_gap_fixes.py  test_lineages.py
dataset-catalog-client/tests/models/: test_dataset.py  test_metadata.py
dataset-catalog-client/tests/registration/: test_builder.py  test_request.py
dataset-catalog-client/tests/utils/: test_checksums.py  test_manifest.py
dataset-catalog-client/tests/utils/checksum/: test_generate.py  test_hashing.py
dataset-catalog-client/tests/utils/manifest/: test_manifest.py  test_manifest_extractor.py  test_manifest_write.py
plugins/catalog/: .mcp.json  CHANGELOG.md
plugins/catalog/.claude-plugin/: plugin.json
plugins/catalog/agents/: catalog-reader.md
plugins/catalog/hooks/: allow-catalog-reads.py  hooks.json
plugins/catalog/reference/: install.md  read-contract.md  rest.md
schema/: CHANGELOG.md  README.md
schema/v1.4.0/: schema.md
(+15 files in other folders)
