[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catalog-client"
version = "0.1.0"
description = "Python client library for the Scientific Dataset Catalog API"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "pydantic>=2.10.0",
    "boto3>=1.28.0",
    "blake3>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
]

[tool.ruff]
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.9.0",
    "moto>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
