[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catalog-client"
version = "0.2.0"
description = "Python client library for the Scientific Dataset Catalog API"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.90",
    "httpx==0.28.1",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
checksum = [
  "blake3>=0.3.0",
  "awscrt>=0.32.1",
  "crcmod>=1.7",
]

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]

dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.9.0",
    "moto>=4.0.0",
    "mypy>=2.0.0",
]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore.*", "crcmod", "crcmod.*", "awscrt.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
